[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
color-eyre = "0.6.3"
pnet = "0.35.0"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
serde_regex = "1.1.0"
simple-dns = "0.9.1"
socket2 = { version = "0.5.8", features = ["all"] }
tokio = { version = "1.42.0", features = ["full"] }
